--- a/helm/charts/dependencies/postgresql/values-dev.yaml
+++ b/helm/charts/dependencies/postgresql/values-dev.yaml
@@ -3,3 +3,9 @@ auth:
   username: "dev_user"
   database: "weather"
   password: "newUserPassword123"
+
+primary:
+  service:
+    type: NodePort
+    nodePorts:
+      postgresql: 30001
