feat: weather api returns data

--- a/src/Weather.Application/Weather.Application.csproj
+++ b/src/Weather.Application/Weather.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../Weather.Core/Weather.Core.csproj" />
+  </ItemGroup>
+
 </Project>
